#8322 closed bug (fixed)
Black Screen on digital connector mode set.
Reported by: | SeanCollins | Owned by: | kallisti5 |
---|---|---|---|
Priority: | blocker | Milestone: | R1/beta1 |
Component: | Drivers/Graphics/radeon_hd | Version: | R1/Development |
Keywords: | Cc: | disreali | |
Blocked By: | Blocking: | #8151, #8163, #8282 | |
Platform: | All |
Description
seen on 5770 and 5870, logs attached, Black screen after boot splash. I get the typical scrambled screen at startup, then the monitor just turns off.
Attachments (8)
Change History (31)
by , 13 years ago
Attachment: | syslog.old added |
---|
comment:3 by , 13 years ago
Have observed the same on 6770. Can provide a movie (about 4.3 Mb) if so desired.
comment:4 by , 13 years ago
Thanks, but we don't really need a movie. A syslog would be more helpful. See here for info on finding it
comment:5 by , 13 years ago
Cc: | added |
---|
comment:7 by , 13 years ago
Doesn't work for me. The screen still turns of shortly after the "rocket" icon. The system seems to respond though (doesn't lock up): I can shutdown by pressing the power button or hold Ctrl-Alt-Del for some seconds to reboot.
Attaching syslog …
comment:8 by , 13 years ago
I tested43810, no sucess.
this worked back in early january and mid to late december iirc.
comment:9 by , 13 years ago
New log, from 48380 gcc2 hybrid, further note, this is a dvi to hdmi cable on a hdmi monitor. 1920x1080 23 inch. If that matters at all.Tried using both dvi ports. Result is identical.
by , 13 years ago
Attachment: | gcc2h-43830 log added |
---|
by , 13 years ago
Attachment: | gcc2h-43833 added |
---|
by , 13 years ago
Attachment: | gcc2h-43863 added |
---|
comment:10 by , 13 years ago
Just tested 43877. The shortly visible scrambled screen is gone, but the display still turns off after the rocket.
kallisti5, I wonder how I can support your awesome work on the driver. Is the problem, that you have no 5xxx card? If so, would it help at all, if you had one? There are used 5450s on Amazon for USD 25. Let me know and I'll get you one delivered.
comment:11 by , 13 years ago
Cc: | added; removed |
---|---|
Version: | R1/alpha3 → R1/Development |
comment:12 by , 13 years ago
hrev43900 solves a big issue with mode setting, please give it (or a later version) a try!
comment:13 by , 13 years ago
Summary: | RadeonHd Black Screen after splash screen → Black Screen after splash screen Radeon HD 5770 and Radeon HD 5870 |
---|
by , 13 years ago
Attachment: | SYSLOG00.hrev3901.TXT added |
---|
comment:14 by , 13 years ago
Sorry, still no luck with hrev43901 on my 5450. Screen still switches to stand-by after boot splash. In case it matters: the syslog says the card has HDMI, 2x DVI and VGA, but it really has only 1 DVI, not 2.
comment:15 by , 13 years ago
Milestone: | R1 → R1/beta1 |
---|---|
Priority: | normal → blocker |
Summary: | Black Screen after splash screen Radeon HD 5770 and Radeon HD 5870 → Black Screen on digital connector mode set. |
Moving to Blocker for release. This is the symptom of a more general mode setting issue with digital outputs on Radeon HD devices.
comment:16 by , 13 years ago
Blocking: | 8151 added |
---|
comment:17 by , 13 years ago
Blocking: | 8163 added |
---|
comment:18 by , 13 years ago
Blocking: | 8282 added |
---|
comment:19 by , 13 years ago
These cards work fiarly well with vesa. Are you sure you want to block alpha 4 over this ? I mean I'd really appreciate the increased priority on a personal level but its not like Haiku r1a4 can't get by without a radeon Hd driver.Users have been doing it for sometime.
Is there anything I can do or help with testing wise ? I can now build but understanding the git bisect functions is a bit confusing to me to say the least. If you can help me, I'll test the revisions down to when it last worked to help you get this fixed.
by , 13 years ago
Attachment: | hrev43954syslogRadeon5770 added |
---|
comment:20 by , 13 years ago
Ok, before my eyes bleed here.
The last working rev I tested was 43489
The first radeon_hd rev that I tested that does not work is 43503
Do you need me to go further or is this close enough ? I am also attaching the last hd5xxx driver that I can find that works to the ticket, for anyone lurking the ticket.
hrev43489 works hrev43490 works hreb43493works hrev43497works hrev43498 works hrev43501 works
hrev43503 broken tested twice
Rev 43503 broke the driver.
by , 13 years ago
Attachment: | 43489 radeon_hd functional 5xxxx.zip added |
---|
observed on gcc4h and gcc2h builds as discussed on irc. I don't know why I didn't think to add this snippet of info before, but the message I get from my monitor, is that no signal is detected and then it drops into standby, hopeyfully this is helpful info ?