radeon_hd: Fix digital output

* Resolves blocker #8322.
* Should resolve #8151, #8163, #8282, #8457
* Digital output on DVII was getting hard set
  in the encoder to analog / CRT mode.
* We now check the edid "type" flag
* Flag gets set to 1 if edid data from digital
  transmitter, 0 if analog transmitter.